# sql-inline-tool

./: .gitignore  README.md  pyproject.toml  test_duckdb.py
examples/: department_mapping.csv  new_departments.csv  new_orders.csv  new_schema.sql  new_users.csv  old_departments.csv  old_orders.csv  old_schema.sql  old_users.csv  schema.sql  source_data.csv  target_data.csv  validation_rules.csv
rules/: 01-setup-dependencies.md  02-querying-with-duckdb.md  03-inline-validations.md
skills/java-graphql-migration/: REFERENCE.md  SKILL.md
skills/java-graphql-migration/docs/: core-concepts.md  error-handling.md  http-client.md  migration-patterns.md  testing.md  webclient.md
skills/java-graphql-migration/examples/: GraphQLQueryBuilder.java  HttpClientGraphQL.java  MigrationAfter.java  MigrationBefore.java  WebClientGraphQL.java
skills/java-graphql-migration/templates/: HttpClientTemplate.java  WebClientTemplate.java
sql/: 01_ingest_csv.sql  02_checkpoint_parquet.sql  03_schema_to_csv.sql  04_query_examples.sql  05_validate_migration.sql  06_repeatable_validation.sql  07_migration_example.sql
sql_inline_tool/: __init__.py  cli.py  ingest.py  query.py  schema_converter.py  validator.py
tests/: test_ingest.py  test_query.py  test_schema_converter.py  test_validator.py
