[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-inline-tool"
version = "0.1.0"
description = "Inline validation of SQL scripts pre- and post-migration using DuckDB"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.0.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
sql-inline = "sql_inline_tool.cli:main"

[tool.setuptools.packages.find]
include = ["sql_inline_tool*"]
